# poi-api

./: README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 45505516313f_db_v1_0.py
crud/: poi_crud.py
db/: create_tables.py  docker-compose.yaml
dto/: poi_dto.py
