[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "~2.3.0"
SQLAlchemy = "~2.0.20"
GeoAlchemy2 = "== 0.14.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
psycopg2-binary = "^2.9.7"
alembic = "~1.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
